tests/baselines/reference/functionCall8.errors.txt
tests/cases/compiler/functionCall8.ts(3,1): error TS2572: No overload expects 2 or more arguments. The most likely overload that matches expects 1 arguments.
tests/cases/compiler/functionCall8.ts(4,5): error TS2345: Argument of type '4' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/functionCall8.ts (2 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
    ~~~~~~~~~~~~~~~~~
!!! error TS2572: No overload expects 2 or more arguments. The most likely overload that matches expects 1 arguments.
    foo(4);
        ~
!!! error TS2345: Argument of type '4' is not assignable to parameter of type 'string'.
    foo();
    